@@ -98,7 +98,12 @@ sub wing_parent_relationship {
             if (exists $describe_options{include_related_objects}) {
                 if ((ref $describe_options{include_related_objects} eq 'ARRAY' && $field ~~ $describe_options{include_related_objects}) || (ref $describe_options{include_related_objects} ne 'ARRAY' && $describe_options{include_related_objects})) {
                     if ($self->$id) {
-                        $out->{$field} = $self->$field->describe;
+			if ($self->$field eq undef) {
+				ouch 440, $field.' ('.$self->$id.') does not exist for '.$self->wing_object_name.' ('.$self->id.').';
+			}
+			else { 
+                        	$out->{$field} = $self->$field->describe;
+			}
                     }
                 }
             }
